Completed recpie pages for buttlermilk pancakes and waffle house style waffles

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Fluffy French Toast Recipe</h1>
-    <img src="https://www.simplyrecipes.com/thmb/dYTJuEuT5bw6SBXLGbMAGO5zi-s=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-French-Toast-Lead-Shot-3b-c3a68a576a9548f5bd43cce3d2d7f4b7.jpg"
-     alt="French Toast Image" height="400" width="400">
+    <img src="C:\Users\cyber\Documents\TOP\repos\odin-recipes\images\French-Toast.jpg" alt="French Toast Image" height="400" width="400">
      <h2>Fluffy French Toast Recipe</h2>
      <p>This is the best French toast recipe. It's different because it uses flour. I have given it to some friends and they've all liked it better
         that the French toast they usually make!
