--- a/recipes/buttermilk-pancakes.html
+++ b/recipes/buttermilk-pancakes.html
@@ -7,10 +7,31 @@
 </head>
 <body>
     <h1>Buttermilk Pancakes Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/X2cMaVGyK-DIz1B7DRoLZZujuo0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/24530-ButtermilkPancakes-II-mfs-4X3-3385-b9e08648074145d18c538731c2be4215.jpg"
-    alt="Image of Buttermilk Pancake Stack" width="400" height="400">
+    <img src="C:\Users\cyber\Documents\TOP\repos\odin-recipes\images\buttermilk-pancakes.jpg" alt="Image of Buttermilk Pancake Stack" width="400" height="400">
     <h2>Buttermilk Pancakes Recipe</h2>
-    
+    <p>A verry light and fluffy pancake recipe that requires fresh buttermilk, but it's the best I've ever made!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 cups all-purpose flour</li>
+        <li>3 tablespoons white sugar</li>
+        <li>3 teasoons baking soda</li>
+        <li>1 1/2 teaspoons baking soda</li>
+        <li>3/4 teaspoon salt</li>
+        <li>3 cups buttermilk</li>
+        <li>1/2 cup milk</li>
+        <li>3 eggs</li>
+        <li>1/3 cup butter, mealted</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Combine flour, sugar, baking powder, baking soda, and salt in a large bowl. Beat together buttermilk, milk, eggs, and melted butter in a separate bowl. Keep the two mixtures separate until you are ready to cook.</li>
+        <li>Heat a lightly oiled griddle or frying pan over medium-high heat. You can flick water across the surface and if it beads up and sizzles, it's ready.</li>
+        <li>Pour the wet mixture into the dry mixture; use a wooden spoon or fork to mix until it's just blended together. The batter will be a little lumpy which is what you want.</li>
+        <li>Pour or scoop the batter onto the preheated griddle, using approximately 1/2 cup for each pancake. Cook until bubbles appear on the surface, 1 to 2 minutes; flip with a spatula and cook until browned on the other side. Repeat with remaining batter.</li>
+        <li>Serve hot and enjoy!</li>
+
+
+    </ol>
     
 </body>
 </html>
