--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -7,9 +7,37 @@
 </head>
 <body>
     <h1>Waffle House Style Waffles Recipe</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2023%2F02%2F15%2F8534837-Waffle-House-Style-Waffles-4x3-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" 
-    alt="Image of Waffle" width="500" height="400">
+    <img src="C:\Users\cyber\Documents\TOP\repos\odin-recipes\images\Waffle-House-Style-Waffles.jpg" alt="Image of Waffle" width="500" height="400">
     <h2>Waffle House Style Waffles Recipe</h2>
+    <p>If you're cravingd Waffle House waffles, try this easy copycat recipe. You won't tase a difference!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 1/2 cups flour</li>
+        <li>2 tablespoons cornstarch</li>
+        <li>1 teaspoon salt</li>
+        <li>1/2 teaspoon baking power</li>
+        <li>1/2 teaspoon baking soda</li>
+        <li>1 large egg</li>
+        <li>1/4 cup sugar</li>
+        <li>1/4 cup salted butter, softened, plus more for serving</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 cup half-and-half</li>
+        <li>1/2 cup butermilk</li>
+        <li>cooking spray</li>
+        <li>pure maple surup and/or chocolate chips, for serving</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Whisk together flour, cornstarch, salt, baking power, and baking soda in a bowl</li>
+        <li>Whisk together egg, sugar, butter, and vanilla in a separate large bowl until mxixture is smooth. Which in hald-and-half and butter milk.
+            Add flour mixture; stir until just combined and a few lumps remain. (Do not overmix). Chill, covered, at least 1 hour or up to overnight. 
+        </li>
+        <li>Preheat waffle iron to medium-high; lightly coat with cooking spray. Pour bout 2/3 cup batter onto waffle iron. Cook until golden and crips on edges, 4 to 6
+            minutes. Transfer to a plate; keep warm. Repeat with remaining batter. 
+        </li>
+        <li>Serve waffles with maple syrup, chocolate chips, and/or additional butter</li>
+
+    </ol>
     
 </body>
 </html>
